--- a/public/frontEnd/css/main.css
+++ b/public/frontEnd/css/main.css
@@ -1,4 +1,4 @@
-﻿
+
 /*************************
 *******Typography******
 **************************/
@@ -76,8 +76,17 @@ a#scrollUp i{
   margin-left: 0;
   margin-right: 0;
   padding-bottom: 20px;
+  padding-top: 40px;
+}
+
+.header-middle .container .row {
+  border-bottom: 1px solid #FFF;
+  margin-left: 0;
+  margin-right: 0;
+  padding-bottom: 20px;
   padding-top: 20px;
 }
+
 
 .header-middle .container .row .col-sm-4{
   padding-left: 0;
@@ -85,19 +94,6 @@ a#scrollUp i{
 
 .header-middle .container .row .col-sm-8 {
 	padding-right:0;
-}
-
-
-.btn-group.open .dropdown-toggle {
-  background: rgba(0, 0, 0, 0);
-  box-shadow: none;
-}
-
-.dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
-  background-color: #C0C0C0;
-  color: #C0C0C0;
-  font-family: 'Roboto', sans-serif;
-  text-decoration: none;
 }
 
 
@@ -183,42 +179,6 @@ a#scrollUp i{
   background-position: 130px;
 }
 
-/*  Dropdown menu*/
-
-.navbar-header 
-.navbar-toggle .icon-bar {
-    background-color: #fff;
-}
-
-
-.nav.navbar-nav > li:hover > ul.sub-menu{
-  display: block;
-  -webkit-animation: fadeInUp 400ms;
-  -moz-animation: fadeInUp 400ms;
-  -ms-animation: fadeInUp 400ms;
-  -o-animation: fadeInUp 400ms;
-  animation: fadeInUp 400ms;
-}
-
-ul.sub-menu {
-	position: absolute;
-	top: 30px;
-	left: 0;
-	background: rgba(0, 0, 0, 0.6);
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	width: 220px;
-	-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 3px 3px #C71585(0, 0, 0, 0.1);
-	display: none;
-	z-index: 999;
-}
-
-.dropdown ul.sub-menu li .active{
-  color: #C71585;
-  padding-left: 0;
-}
 
 
 .navbar-nav li ul.sub-menu li{
@@ -295,24 +255,6 @@ ul.sub-menu {
   overflow: hidden;
 }
 
-.video-gallery {
-  margin-top: 57px;
-  position: inherit;
-}
-
-.video-gallery a img {
-  height: 100%;
-  width: 100%;
-}
-
-.iframe-img {
-  position: relative;
-  display: block;
-  height: 61px;
-  margin-bottom: 10px;
-  border: 2px solid #000000;
-  border-radius: 3px;
-}
 
 .overlay-icon {
   position: absolute;
@@ -338,26 +280,6 @@ ul.sub-menu {
   margin-top: -20px;
 }
 
-.video-gallery a:hover .overlay-icon{
-  opacity: 1;
-}
-
-.video-gallery p {
-  color: #8C8C88;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  font-weight: 500;
-  margin-bottom:0px;
-}
-
-.video-gallery  h2 {
-  color: #8c8c88;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  font-weight: 300;
-  text-transform:uppercase;
-  margin-top:0px;
-}
 
 
 .address {
@@ -850,16 +772,16 @@ h2.title {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: #fff;
+  color: ;
 }
 
 
 
 .add-to-cart {
-  background:#F5F5ED;
+  background:#D91C5C;
   border: 0 none;
   border-radius: 0;
-  color: #696763;
+  color: #fff;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
@@ -881,8 +803,8 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background:#D91C5C;
-  color: #FFFFFF;
+  background:#DEDEDC;
+  color: #40403E;
 }
 
 .choose {
@@ -1287,10 +1209,10 @@ h2.title {
 }
 
 #reviews button {
-  background: #D91C5C;
+  background: #fff;
   border: 0 none;
   border-radius: 0;
-  color: #FFFFFF;
+  color: #D91C5C;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
 }
